newsletter subscription mobile fix (#853)
* readjust newsletter subscription box layout

* make subscribe box responsive on cloud and enterprise pages

--- a/src/components/ActionCard/styles.module.css
+++ b/src/components/ActionCard/styles.module.css
@@ -1,14 +1,13 @@
 .root {
-  padding: 4rem;
+  padding: 2rem;
   border-radius: 16px;
   background: var(--theme-attention-card-bg-color);
-  min-width: 380px;
 }
 
 .title {
   margin-top: 1rem;
   margin-bottom: 1rem;
-  font-size: var(--font-size-big-2);
+  font-size: var(--font-size-big-1);
   font-weight: var(--ifm-font-weight-bold);
 }
 
@@ -16,11 +15,19 @@
   font-size: var(--font-size-large);
 }
 
-.content {
-  display: flex;
-  padding-top: 2rem;
+@media screen and (min-width: 880px) {
+  .root {
+    padding: 4rem;
+  }
+
+  .title {
+    font-size: var(--font-size-big-1);
+  }
 }
 
+.content {
+  display: flex;
+}
 
 .skinPrimary {
   background: var(--palette-pink);
