--- a/src/css/index/footer.module.css
+++ b/src/css/index/footer.module.css
@@ -1,7 +1,11 @@
 .cards {
   display: grid;
   gap: 1.5rem;
-  grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
-  margin-top: 9rem;
-  width: 100%;
+  padding-top: 9rem;
+}
+
+@media screen and (min-width: 768px) {
+  .cards {
+    grid-template-columns: 1fr 1fr;
+  }
 }
